Added meta vieport tag to index and added some information on readme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="title" content="FrameworkJS - The new JS SPA framework">
 		<meta name="keywords" content="Keywords will go here">
 		<meta name="description" content="Description will go here.">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
